2009-07-08  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	fix debian bug #438132

2009-07-06  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	* fvwm/style.c (fw_match_style_id):
	Fix fvwmstyle resource

2009-07-05  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	* fvwm/events.c (HandleMapRequestKeepRaised):
	Make sure that a PropertyNotify on the WM_STATE property is always
	sent out when a window is requested to be moved to the withdrawn
	state. (Needed by QT)

2009-07-01  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* sample.fvwmrc/DecorMwm:
	* sample.fvwmrc/DecorWin95:
	* sample.fvwmrc/new-features:
	* sample.fvwmrc/system.fvwm2rc:
	* sample.fvwmrc/system.fvwm2rc-sample-1:
	* sample.fvwmrc/system.fvwm2rc-sample-2:
	* sample.fvwmrc/system.fvwm2rc-sample-95:
	Use !-negation for styles instead of No...

	* NEWS:
	fix a typo

	* sample.fvwmrc/system.fvwm2rc-sample-95:
	sed -i '/^#*\(+\|AddToMenu\) "[^%"]*%[^%"]*"/s/%\([^"]*\)/%\1%/'
	sed -i 's/StayOnTop/StaysOnTop/'
	According to patches by Manoj Srivastava

2009-03-17  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/externs.h:
	* fvwm/fvwm.c:
	* fvwm/session.c:
	convert my old code to use var_name and function_name coding style

2009-02-23  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* NEWS:
	* configure.ac:
	increased version to 2.5.28

	* ANNOUNCE:
	* NEWS:
	* configure.ac:
	updated for 2.5.27 release

2009-02-23  Thomas Adam <thomas.adam22@gmail.com>
	* fvwm/bindings.c (print_bindings):
	Fixed compilation of not having libstroke installed by using ifdefs
	around stroke code.

2009-02-22  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/bindings.c (print_bindings):
	slight cleanup

	* libs/charmap.c (charmap_table_to_string):
	several memory menagement fixes.

2009-02-22  Thomas Adam <thomas.adam22@gmail.com>

	* libs/charmap.c (charmap_table_to_string):
	Reduce memory management on the stack, by making only those variables