@@ -8,14 +8,14 @@ libfvwm_a_SOURCES = \
 	CombineChars.h Cursor.h Event.h FBidi.h FEvent.h FGettext.h FImage.h \
 	FRender.h FRenderInit.h FRenderInterface.h FSMlib.h FScreen.h \
 	FShape.h FShm.h FTips.h Fcursor.h Fft.h FftInterface.h Ficonv.h \
-	Flocale.h FlocaleCharset.h Fpng.h Fsvg.h Fxpm.h Grab.h Graphics.h \
-	Module.h Parse.h Picture.h PictureBase.h PictureDitherMatrice.h \
-	PictureGraphics.h PictureImageLoader.h PictureUtils.h Rectangles.h \
-	Strings.h System.h Target.h WinMagic.h XError.h XResource.h charmap.h \
-	defaults.h envvar.h fio.h flist.h fsm.h ftime.h fvwm_sys_stat.h \
-	fvwmlib.h fvwmrect.h fvwmsignal.h gravity.c gravity.h lang-strings.h \
-	modifiers.h queue.h safemalloc.h setpgrp.h timeout.h vpacket.h \
-	wcontext.h wild.h \
+	Flocale.h FlocaleCharset.h Fplay.h Fpng.h Fsvg.h Fxpm.h Grab.h \
+	Graphics.h Module.h Parse.h Picture.h PictureBase.h \
+	PictureDitherMatrice.h PictureGraphics.h PictureImageLoader.h \
+	PictureUtils.h Rectangles.h Strings.h System.h Target.h WinMagic.h \
+	XError.h XResource.h charmap.h defaults.h envvar.h fio.h flist.h \
+	fsm.h ftime.h fvwm_sys_stat.h fvwmlib.h fvwmrect.h fvwmsignal.h \
+	gravity.c gravity.h lang-strings.h modifiers.h queue.h safemalloc.h \
+	setpgrp.h timeout.h vpacket.h wcontext.h wild.h \
 	\
 	BidiJoin.c Flocale.c PictureUtils.c FScreen.c Graphics.c \
 	PictureGraphics.c Bindings.c FlocaleCharset.c Parse.c \
